po: update po/sk_SK/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sk_SK/menu.po
+++ b/po/sk_SK/menu.po
@@ -11,8 +11,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:10+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Slovak (http://www.transifex.com/civicrm/civicrm/language/sk/)\n"
 "MIME-Version: 1.0\n"
@@ -130,8 +130,8 @@ msgid "Case Activity"
 msgstr "Aktivity prípadu"
 
 msgctxt "menu"
-msgid "Case Report"
-msgstr "Prehľad prípadu"
+msgid "Case Activity Audit"
+msgstr ""
 
 msgctxt "menu"
 msgid "Case Custom Set"
@@ -150,8 +150,8 @@ msgid "Assign to Another Client"
 msgstr "Priradiť inému klientovi"
 
 msgctxt "menu"
-msgid "Build Activity To Case"
-msgstr "Vytvoriť prípad z aktivity"
+msgid "File on Case"
+msgstr ""
 
 msgctxt "menu"
 msgid "Case Details"
@@ -175,10 +175,6 @@ msgstr "Stavy prípadu"
 msgctxt "menu"
 msgid "Encounter Mediums"
 msgstr "Mediálne stretnutia"
-
-msgctxt "menu"
-msgid "Change Activity Status"
-msgstr "Zmeniť Stav aktivity"
 
 msgctxt "menu"
 msgid "CiviContribute Dashboard"
@@ -253,6 +249,10 @@ msgctxt "menu"
 msgid "Financial Types"
 msgstr "Finančné typy"
 
+msgctxt "menu"
+msgid "New Payment"
+msgstr ""
+
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Financial Accounts"
@@ -270,9 +270,15 @@ msgstr "Akceptovanie Kreditných kariet"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Soft Credit Types"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Contributions"
 msgstr "Príspevky"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Recurring Contributions"
 msgstr "Opakujúce sa príspevky"
@@ -323,6 +329,23 @@ msgstr "Účtovné spracovania"
 msgctxt "menu"
 msgid "Accounting Batch Export"
 msgstr "Export úštovného spracovania"
+
+msgctxt "menu"
+msgid "View Payment"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "CiviContribute Component Settings"
+msgstr ""
+
+msgctxt "menu"
+msgid "PDF Invoice"
+msgstr ""
+
+msgctxt "menu"
+msgid "Email Invoice"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -476,6 +499,11 @@ msgstr "Vyhladať preferencie"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Date Preferences"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Navigation Menu"
 msgstr "Navigačné menu"
 
@@ -509,10 +537,6 @@ msgctxt "menu"
 msgid "Schedule Reminders"
 msgstr "Naplánované pripomienky"
 
-msgctxt "menu"
-msgid "This should never be seen"
-msgstr " nemalo by byť nikdy zobrazené"
-
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Preferred Communication Methods"
@@ -530,6 +554,11 @@ msgstr "Vytlačiť stránku v (PDF) formáte"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Communication Style Options"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Email Greeting Formats"
 msgstr "Formáty Emailových pozdravov"
 
@@ -543,8 +572,9 @@ msgctxt "menu"
 msgid "Addressee Formats"
 msgstr "Formáty adries"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Location"
+msgid "Languages, Currency, Locations"
 msgstr "Jazyk, mena, lokalita"
 
 #: xml/templates/civicrm_navigation.tpl
@@ -696,10 +726,6 @@ msgid "Administer CiviCRM"
 msgstr "Administrácia CiviCRM"
 
 msgctxt "menu"
-msgid "Option Values"
-msgstr "Hodnoty nastavení"
-
-msgctxt "menu"
 msgid "Price Sets"
 msgstr "Cenové zostavy"
 
@@ -767,10 +793,6 @@ msgstr "Zostavovanie vyhľadávania"
 msgctxt "menu"
 msgid "Custom Searches"
 msgstr "Vlastné vyhľadávania"
-
-msgctxt "menu"
-msgid "Simple Search"
-msgstr "Jednoduché vyhľadávanie"
 
 msgctxt "menu"
 msgid "New Contact"
@@ -862,6 +884,10 @@ msgid "CiviCRM Blog"
 msgstr "CiviCRM Blog"
 
 msgctxt "menu"
+msgid "CiviCRM Getting Started"
+msgstr ""
+
+msgctxt "menu"
 msgid "Case Dashlet"
 msgstr "Dashlet prípadov"
 
@@ -916,6 +942,10 @@ msgid "Import Activities"
 msgstr "Importovať aktivity"
 
 msgctxt "menu"
+msgid "Import Multi-value Custom Data"
+msgstr ""
+
+msgctxt "menu"
 msgid "Upgrade CiviCRM"
 msgstr "Aktualizácia CiviCRM"
 
@@ -952,12 +982,16 @@ msgid "Browse Uploaded files"
 msgstr "Prezrieť natiahnuté súbory"
 
 msgctxt "menu"
-msgid "Delete file"
-msgstr "Zmazať súbor"
+msgid "Delete File"
+msgstr ""
 
 msgctxt "menu"
 msgid "Log out"
 msgstr "Odhlásiť"
+
+msgctxt "menu"
+msgid "CiviCRM API"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -971,6 +1005,10 @@ msgstr "Q jednotka"
 msgctxt "menu"
 msgid "ProfileEditor"
 msgstr "Editor profilov"
+
+msgctxt "menu"
+msgid "Confirm dates"
+msgstr ""
 
 msgctxt "menu"
 msgid "CiviCRM Profile Create"
@@ -1067,6 +1105,10 @@ msgid "Event Online Registration"
 msgstr "Online registrácia na podujatie"
 
 msgctxt "menu"
+msgid "Repeat Event"
+msgstr ""
+
+msgctxt "menu"
 msgid "Conference Slots"
 msgstr "Konferenčne priestory"
 
@@ -1100,6 +1142,10 @@ msgstr "Odstrániť z košíka"
 msgctxt "menu"
 msgid "View Cart"
 msgstr "Zobraziť košík"
+
+msgctxt "menu"
+msgid "Change Registration Selections"
+msgstr ""
 
 msgctxt "menu"
 msgid "CiviGrant Dashboard"
@@ -1154,8 +1200,8 @@ msgid "Resubscribe"
 msgstr "Znovuzapísať"
 
 msgctxt "menu"
-msgid "Optout"
-msgstr "Odhlásenie"
+msgid "Opt-out"
+msgstr ""
 
 msgctxt "menu"
 msgid "Confirm"
@@ -1290,6 +1336,11 @@ msgstr "Zoznam záznamov"
 msgctxt "menu"
 msgid "CiviCRM News"
 msgstr "CiviCRM Novinky"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Getting Started"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1428,6 +1479,16 @@ msgstr "Vyhľadať hromadná SMS"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "New A/B Test"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Manage A/B Tests"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Reports"
 msgstr "Zostavy Členstva"
 
@@ -1533,11 +1594,6 @@ msgstr "Lokalizácia"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Locations"
-msgstr "Jazyk, mena, lokalita"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
 msgid "Preferred Language Options"
 msgstr "Preferované možnosti jazykov"
 
@@ -1555,6 +1611,11 @@ msgstr "Oprávnenia (Sptáva prístupov)"
 msgctxt "menu"
 msgid "System Settings"
 msgstr "Systémové nastavenia"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Connections"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1623,6 +1684,11 @@ msgstr "CiviGrant"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Grant Status"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "CiviMember"
 msgstr "CiviČlen"
 
@@ -1633,8 +1699,13 @@ msgstr "Všetky zostavy"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Help"
-msgstr "Pomoc"
+msgid "Support"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Get started"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1643,18 +1714,43 @@ msgstr "Dokumentácia"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Community Forums"
-msgstr "Komunitné fórum"
+msgid "Ask a question"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Participate"
-msgstr "Účasť"
+msgid "Get expert help"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "About"
-msgstr "O"
+msgid "About CiviCRM"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Register your site"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Join CiviCRM"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "API Explorer"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer Docs"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1881,6 +1977,11 @@ msgstr "Poskytuje podrobnosti transakcie pre všetky príspevky a platby, vráta
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Provides information about the status of recurring contributions"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Summary"
 msgstr "Súhrn Členov "
 
@@ -2050,144 +2151,69 @@ msgid ""
 "Detailed report for canvassing, phone-banking, walk lists or other surveys."
 msgstr "Podrobná zostava o agitácii, telefónnom bankovníctve,  alebo iných prieskumoch."
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Case Activity Audit"
+msgid "Payment Methods"
 msgstr ""
 
 msgctxt "menu"
-msgid "New Payment"
+msgid "Configure CKEditor"
+msgstr ""
+
+msgctxt "menu"
+msgid "Batch Merge Duplicate Contacts"
+msgstr ""
+
+msgctxt "menu"
+msgid "Insert CiviCRM Content"
+msgstr ""
+
+msgctxt "menu"
+msgid "Self-service Registration Update"
+msgstr ""
+
+msgctxt "menu"
+msgid "Self-service Registration Transfer"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Soft Credit Types"
-msgstr ""
-
-msgctxt "menu"
-msgid "View Payment"
+msgid "System Status"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Communication Style Options"
-msgstr ""
-
-msgctxt "menu"
-msgid "Import Multi-value Custom Data"
-msgstr ""
-
-msgctxt "menu"
-msgid "Change Registration Selections"
+msgid "Components"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Grant Status"
+msgid "Extensions"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Developer"
+msgid "Activity Details"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "API Explorer"
+msgid "Activity Summary"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Developer Docs"
-msgstr ""
-
-msgctxt "menu"
-msgid "File on Case"
+msgid "Shows activity statistics by type / date"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "CiviContribute Component Settings"
-msgstr ""
-
-msgctxt "menu"
-msgid "PDF Invoice"
-msgstr ""
-
-msgctxt "menu"
-msgid "Email Invoice"
+msgid "Pledge Detail"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Date Preferences"
-msgstr ""
-
-msgctxt "menu"
-msgid "Delete File"
-msgstr ""
-
-msgctxt "menu"
-msgid "CiviCRM API"
-msgstr ""
-
-msgctxt "menu"
-msgid "Confirm dates"
-msgstr ""
-
-msgctxt "menu"
-msgid "Repeat Event"
-msgstr ""
-
-msgctxt "menu"
-msgid "Opt-out"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "New A/B Test"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Manage A/B Tests"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Support"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Get started"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Ask a question"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Get expert help"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "About CiviCRM"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Register your site"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Join CiviCRM"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Provides information about the status of recurring contributions"
+msgid ""
+"List of pledges including amount pledged, pledge status, next payment date, "
+"balance due, total amount paid etc."
 msgstr ""
