--- a/po/sl_SI/provinces.po
+++ b/po/sl_SI/provinces.po
@@ -7,8 +7,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Slovenian (http://www.transifex.com/civicrm/civicrm/language/sl/)\n"
 "MIME-Version: 1.0\n"
@@ -1878,7 +1878,7 @@ msgid "Burgas"
 msgstr ""
 
 msgctxt "province"
-msgid "Dobric"
+msgid "Dobrich"
 msgstr ""
 
 msgctxt "province"
@@ -1890,19 +1890,19 @@ msgid "Haskovo"
 msgstr ""
 
 msgctxt "province"
-msgid "Jambol"
+msgid "Yambol"
 msgstr ""
 
 msgctxt "province"
-msgid "Kardzali"
+msgid "Kardzhali"
 msgstr ""
 
 msgctxt "province"
-msgid "Kjstendil"
+msgid "Kyustendil"
 msgstr ""
 
 msgctxt "province"
-msgid "Lovec"
+msgid "Lovech"
 msgstr ""
 
 msgctxt "province"
@@ -1938,7 +1938,7 @@ msgid "Sliven"
 msgstr ""
 
 msgctxt "province"
-msgid "Smoljan"
+msgid "Smolyan"
 msgstr ""
 
 msgctxt "province"
@@ -1950,11 +1950,11 @@ msgid "Stara Zagora"
 msgstr ""
 
 msgctxt "province"
-msgid "Sumen"
+msgid "Shumen"
 msgstr ""
 
 msgctxt "province"
-msgid "Targoviste"
+msgid "Targovishte"
 msgstr ""
 
 msgctxt "province"
@@ -1970,7 +1970,7 @@ msgid "Vidin"
 msgstr ""
 
 msgctxt "province"
-msgid "Vraca"
+msgid "Vratsa"
 msgstr ""
 
 msgctxt "province"
@@ -2834,7 +2834,7 @@ msgid "Maule"
 msgstr ""
 
 msgctxt "province"
-msgid "Region Metropolitana de Santiago"
+msgid "Santiago Metropolitan"
 msgstr ""
 
 msgctxt "province"
@@ -6030,7 +6030,7 @@ msgid "Bali"
 msgstr "Bali"
 
 msgctxt "province"
-msgid "Bangka Belitung"
+msgid "Kepulauan Bangka Belitung"
 msgstr ""
 
 msgctxt "province"
@@ -6046,8 +6046,8 @@ msgid "Gorontalo"
 msgstr ""
 
 msgctxt "province"
-msgid "Irian Jaya"
-msgstr "Irian Jaya"
+msgid "Papua Barat"
+msgstr ""
 
 msgctxt "province"
 msgid "Jambi"
@@ -6138,7 +6138,7 @@ msgid "Sumatera Utara"
 msgstr ""
 
 msgctxt "province"
-msgid "Jakarta Raya"
+msgid "DKI Jakarta"
 msgstr ""
 
 msgctxt "province"
@@ -6146,7 +6146,7 @@ msgid "Aceh"
 msgstr ""
 
 msgctxt "province"
-msgid "Yogyakarta"
+msgid "DI Yogyakarta"
 msgstr ""
 
 msgctxt "province"
@@ -7906,19 +7906,19 @@ msgid "Jelgava"
 msgstr ""
 
 msgctxt "province"
-msgid "Jurmala"
+msgid "Jūrmala"
 msgstr ""
 
 msgctxt "province"
-msgid "Liepaja"
+msgid "Liepāja"
 msgstr ""
 
 msgctxt "province"
-msgid "Rezekne"
+msgid "Rēzekne"
 msgstr ""
 
 msgctxt "province"
-msgid "Riga"
+msgid "Rīga"
 msgstr ""
 
 msgctxt "province"
@@ -9226,7 +9226,7 @@ msgid "Zinder"
 msgstr ""
 
 msgctxt "province"
-msgid "Abuja Capital Territory"
+msgid "Abuja Federal Capital Territory"
 msgstr ""
 
 msgctxt "province"
@@ -9614,7 +9614,7 @@ msgid "Tasman"
 msgstr ""
 
 msgctxt "province"
-msgid "waikato"
+msgid "Waikato"
 msgstr ""
 
 msgctxt "province"
@@ -10686,7 +10686,7 @@ msgid "Chelyabinskaya oblast'"
 msgstr "Čeljabinsko okrožje"
 
 msgctxt "province"
-msgid "Chitinskaya oblast'"
+msgid "Zabaykalsky Krai'"
 msgstr ""
 
 msgctxt "province"
@@ -10706,8 +10706,8 @@ msgid "Kaluzhskaya oblast'"
 msgstr "Kalužsko okrožje"
 
 msgctxt "province"
-msgid "Kamchatskaya oblast'"
-msgstr "Kamčatsko okrožje"
+msgid "Kamchatka Krai'"
+msgstr ""
 
 msgctxt "province"
 msgid "Kemerovskaya oblast'"
@@ -10778,8 +10778,8 @@ msgid "Penzenskaya oblast'"
 msgstr "Penzensko okrožje"
 
 msgctxt "province"
-msgid "Permskaya oblast'"
-msgstr "Permsko okrožje"
+msgid "Perm krai'"
+msgstr ""
 
 msgctxt "province"
 msgid "Pskovskaya oblast'"
@@ -10870,40 +10870,16 @@ msgid "Yevreyskaya avtonomnaya oblast'"
 msgstr "Judovsko avtonomno okrožje"
 
 msgctxt "province"
-msgid "Aginskiy Buryatskiy avtonomnyy"
-msgstr "Aginsko-Burjatsko avtonomno okrožje"
-
-msgctxt "province"
 msgid "Chukotskiy avtonomnyy okrug"
 msgstr "Čukotsko avtonomno okrožje"
-
-msgctxt "province"
-msgid "Evenkiyskiy avtonomnyy okrug"
-msgstr "Evenkijsko avtonomno okrožje"
 
 msgctxt "province"
 msgid "Khanty-Mansiyskiy avtonomnyy okrug"
 msgstr "Hanti-Mansijsko avtonomno okrožje"
 
 msgctxt "province"
-msgid "Komi-Permyatskiy avtonomnyy okrug"
-msgstr "Komi-permjaško avtonomno okrožje"
-
-msgctxt "province"
-msgid "Koryakskiy avtonomnyy okrug"
-msgstr "Korjaško avtonomno okrožje"
-
-msgctxt "province"
 msgid "Nenetskiy avtonomnyy okrug"
 msgstr "Nenško avtonomno okrožje"
-
-msgctxt "province"
-msgid "Taymyrskiy (Dolgano-Nenetskiy)"
-msgstr "Tajmirsko avtonomno okrožje Dolganov in Nencev"
-
-msgctxt "province"
-msgid "Ust'-Ordynskiy Buryatskiy"
-msgstr "Ust-Ordinsko Burjatsko avtonomno okrožje"
 
 msgctxt "province"
 msgid "Yamalo-Nenetskiy avtonomnyy okrug"
@@ -11230,8 +11206,8 @@ msgid "Tristan da Cunha"
 msgstr ""
 
 msgctxt "province"
-msgid "Ajdovscina"
-msgstr "Ajdovščina"
+msgid "Ajdovščina"
+msgstr ""
 
 msgctxt "province"
 msgid "Beltinci"
@@ -11266,8 +11242,8 @@ msgid "Bovec"
 msgstr "Bovec"
 
 msgctxt "province"
-msgid "Braslovce"
-msgstr "Braslovče"
+msgid "Braslovče"
+msgstr ""
 
 msgctxt "province"
 msgid "Brda"
@@ -11278,8 +11254,8 @@ msgid "Brezovica"
 msgstr "Brezovica"
 
 msgctxt "province"
-msgid "Brezica"
-msgstr "Brežica"
+msgid "Brežice"
+msgstr ""
 
 msgctxt "province"
 msgid "Cankova"
@@ -11306,24 +11282,24 @@ msgid "Cerkvenjak"
 msgstr "Cerkvenjak"
 
 msgctxt "province"
-msgid "Crensovci"
-msgstr "Črešnovci"
+msgid "Črenšovci"
+msgstr ""
 
 msgctxt "province"
-msgid "Crna na Koroskem"
-msgstr "Črna na Koroškem"
+msgid "Črna na Koroškem"
+msgstr ""
 
 msgctxt "province"
-msgid "Crnomelj"
-msgstr "Črnomelj"
+msgid "Črnomelj"
+msgstr ""
 
 msgctxt "province"
 msgid "Destrnik"
 msgstr "Destrnik"
 
 msgctxt "province"
-msgid "Divaca"
-msgstr "Divača"
+msgid "Divača"
+msgstr ""
 
 msgctxt "province"
 msgid "Dobje"
@@ -11354,8 +11330,8 @@ msgid "Dolenjske Toplice"
 msgstr "Dolenjske Toplice"
 
 msgctxt "province"
-msgid "Domzale"
-msgstr "Domžale"
+msgid "Domžale"
+msgstr ""
 
 msgctxt "province"
 msgid "Dornava"
@@ -11374,8 +11350,8 @@ msgid "Gorenja vas-Poljane"
 msgstr "Gorenja vas - Poljane"
 
 msgctxt "province"
-msgid "Gorsnica"
-msgstr "Gorišnica"
+msgid "Gorišnica"
+msgstr ""
 
 msgctxt "province"
 msgid "Gornja Radgona"
@@ -11402,16 +11378,16 @@ msgid "Hajdina"
 msgstr "Hajdina"
 
 msgctxt "province"
-msgid "Hoce-Slivnica"
-msgstr "Hoče - Slivnica"
+msgid "Hoče-Slivnica"
+msgstr ""
 
 msgctxt "province"
-msgid "Hodos"
-msgstr "Hodoš"
+msgid "Hodoš"
+msgstr ""
 
 msgctxt "province"
-msgid "Jorjul"
-msgstr "Horjul"
+msgid "Horjul"
+msgstr ""
 
 msgctxt "province"
 msgid "Hrastnik"
@@ -11430,12 +11406,12 @@ msgid "Ig"
 msgstr "Ig"
 
 msgctxt "province"
-msgid "IIrska Bistrica"
-msgstr "Ilirska Bistrica"
+msgid "Ilirska Bistrica"
+msgstr ""
 
 msgctxt "province"
-msgid "Ivancna Gorica"
-msgstr "Ivančna Gorica"
+msgid "Ivančna Gorica"
+msgstr ""
 
 msgctxt "province"
 msgid "Izola"
@@ -11450,8 +11426,8 @@ msgid "Jezersko"
 msgstr "Jezersko"
 
 msgctxt "province"
-msgid "Jursinci"
-msgstr "Juršinci"
+msgid "Juršinci"
+msgstr ""
 
 msgctxt "province"
 msgid "Kamnik"
@@ -11462,8 +11438,8 @@ msgid "Kanal"
 msgstr "Kanal ob Soči"
 
 msgctxt "province"
-msgid "Kidricevo"
-msgstr "Kidričevo"
+msgid "Kidričevo"
+msgstr ""
 
 msgctxt "province"
 msgid "Kobarid"
@@ -11474,8 +11450,8 @@ msgid "Kobilje"
 msgstr "Kobilje"
 
 msgctxt "province"
-msgid "Jovevje"
-msgstr "Kočevje"
+msgid "Kočevje"
+msgstr ""
 
 msgctxt "province"
 msgid "Komen"
@@ -11506,12 +11482,12 @@ msgid "Kranjska Gora"
 msgstr "Kranjska Gora"
 
 msgctxt "province"
-msgid "Krizevci"
-msgstr "Križevci"
+msgid "Križevci"
+msgstr ""
 
 msgctxt "province"
-msgid "Krsko"
-msgstr "Krško"
+msgid "Krško"
+msgstr ""
 
 msgctxt "province"
 msgid "Kungota"
@@ -11522,8 +11498,8 @@ msgid "Kuzma"
 msgstr "Kuzma"
 
 msgctxt "province"
-msgid "Lasko"
-msgstr "Laško"
+msgid "Laško"
+msgstr ""
 
 msgctxt "province"
 msgid "Lenart"
@@ -11554,28 +11530,28 @@ msgid "Logatec"
 msgstr "Logatec"
 
 msgctxt "province"
-msgid "Loska dolina"
-msgstr "Loška Dolina"
+msgid "Loška dolina"
+msgstr ""
 
 msgctxt "province"
-msgid "Loski Potok"
-msgstr "Loški Potok"
+msgid "Loški Potok"
+msgstr ""
 
 msgctxt "province"
 msgid "Lovrenc na Pohorju"
 msgstr "Lovrenc na Pohorju"
 
 msgctxt "province"
-msgid "Luce"
-msgstr "Luče"
+msgid "Luče"
+msgstr ""
 
 msgctxt "province"
 msgid "Lukovica"
 msgstr "Lukovica"
 
 msgctxt "province"
-msgid "Majsperk"
-msgstr "Majšperk"
+msgid "Majšperk"
+msgstr ""
 
 msgctxt "province"
 msgid "Maribor"
@@ -11590,36 +11566,36 @@ msgid "Medvode"
 msgstr "Medvode"
 
 msgctxt "province"
-msgid "Menges"
-msgstr "Mengeš"
+msgid "Mengeš"
+msgstr ""
 
 msgctxt "province"
 msgid "Metlika"
 msgstr "Metlika"
 
 msgctxt "province"
-msgid "Mezica"
-msgstr "Mežica"
+msgid "Mežica"
+msgstr ""
 
 msgctxt "province"
-msgid "Miklavz na Dravskern polju"
-msgstr "Miklavž na Dravskem polju"
+msgid "Miklavž na Dravskem polju"
+msgstr ""
 
 msgctxt "province"
 msgid "Miren-Kostanjevica"
 msgstr "Miren - Kostanjevica"
 
 msgctxt "province"
-msgid "Mirna Pec"
-msgstr "Mirna Peč"
+msgid "Mirna Peč"
+msgstr ""
 
 msgctxt "province"
 msgid "Mislinja"
 msgstr "Mislinja"
 
 msgctxt "province"
-msgid "Moravce"
-msgstr "Moravče"
+msgid "Moravče"
+msgstr ""
 
 msgctxt "province"
 msgid "Moravske Toplice"
@@ -11650,92 +11626,92 @@ msgid "Nova Gorica"
 msgstr "Nova Gorica"
 
 msgctxt "province"
-msgid "Nova mesto"
-msgstr "Novo mesto"
+msgid "Novo mesto"
+msgstr ""
 
 msgctxt "province"
 msgid "Sveta Ana"
 msgstr "Sveta Ana"
 
 msgctxt "province"
-msgid "Sveti Andraz v Slovenskih goricah"
-msgstr "Sveti Andraž v Slovenskih goricah"
+msgid "Sveti Andraž v Slovenskih goricah"
+msgstr ""
 
 msgctxt "province"
 msgid "Sveti Jurij"
 msgstr "Sveti Jurij ob Ščavnici"
 
 msgctxt "province"
-msgid "Salovci"
-msgstr "Šalovci"
+msgid "Šalovci"
+msgstr ""
 
 msgctxt "province"
-msgid "Sempeter-Vrtojba"
-msgstr "Šempeter - Vrtojba"
+msgid "Šempeter-Vrtojba"
+msgstr ""
 
 msgctxt "province"
-msgid "Sencur"
-msgstr "Šenčur"
+msgid "Šenčur"
+msgstr ""
 
 msgctxt "province"
-msgid "Sentilj"
-msgstr "Šentilj"
+msgid "Šentilj"
+msgstr ""
 
 msgctxt "province"
-msgid "Sentjernej"
-msgstr "Šentjernej"
+msgid "Šentjernej"
+msgstr ""
 
 msgctxt "province"
-msgid "Sentjur pri Celju"
-msgstr "Šentjur pri Celju"
+msgid "Šentjur"
+msgstr ""
 
 msgctxt "province"
-msgid "Skocjan"
-msgstr "Škocjan"
+msgid "Škocjan"
+msgstr ""
 
 msgctxt "province"
-msgid "Skofja Loka"
-msgstr "Škofja Loka"
+msgid "Škofja Loka"
+msgstr ""
 
 msgctxt "province"
-msgid "Skoftjica"
-msgstr "Škofljica"
+msgid "Škofljica"
+msgstr ""
 
 msgctxt "province"
-msgid "Smarje pri Jelsah"
-msgstr "Šmarje pri Jelšah"
+msgid "Šmarje pri Jelšah"
+msgstr ""
 
 msgctxt "province"
-msgid "Smartno ob Paki"
-msgstr "Šmartno ob Paki"
+msgid "Šmartno ob Paki"
+msgstr ""
 
 msgctxt "province"
-msgid "Smartno pri Litiji"
-msgstr "Šmartno pri Litiji"
+msgid "Šmartno pri Litiji"
+msgstr ""
 
 msgctxt "province"
-msgid "Sostanj"
-msgstr "Šoštanj"
+msgid "Šoštanj"
+msgstr ""
 
 msgctxt "province"
-msgid "Store"
-msgstr "Štore"
+msgid "Štore"
+msgstr ""
 
 msgctxt "province"
 msgid "Tabor"
 msgstr "Tabor"
 
 msgctxt "province"
-msgid "Tisina"
-msgstr "Tišina"
+msgid "Tišina"
+msgstr ""
 
 msgctxt "province"
 msgid "Tolmin"
 msgstr "Tolmin"
 
 msgctxt "province"
-msgid "Trbovje"
-msgstr "Trbovlje"
+msgid "Trbovlje"
+msgstr ""
 
 msgctxt "province"
 msgid "Trebnje"
@@ -11746,16 +11722,16 @@ msgid "Trnovska vas"
 msgstr "Trnovska vas"
 
 msgctxt "province"
-msgid "Trzic"
-msgstr "Tržič"
+msgid "Tržič"
+msgstr ""
 
 msgctxt "province"
 msgid "Trzin"
 msgstr "Trzin"
 
 msgctxt "province"
-msgid "Turnisce"
-msgstr "Turnišče"
+msgid "Turnišče"
+msgstr ""
 
 msgctxt "province"
 msgid "Velenje"
@@ -11766,12 +11742,12 @@ msgid "Velika Polana"
 msgstr "Velika Polana"
 
 msgctxt "province"
-msgid "Velika Lasce"
-msgstr "Velike Lašče"
+msgid "Velike Lašče"
+msgstr ""
 
 msgctxt "province"
-msgid "Verzej"
-msgstr "Veržej"
+msgid "Veržej"
+msgstr ""
 
 msgctxt "province"
 msgid "Videm"
@@ -11806,36 +11782,36 @@ msgid "Zagorje ob Savi"
 msgstr "Zagorje ob Savi"
 
 msgctxt "province"
-msgid "Zavrc"
-msgstr "Zavrč"
+msgid "Zavrč"
+msgstr ""
 
 msgctxt "province"
-msgid "Zrece"
-msgstr "Zreče"
+msgid "Zreče"
+msgstr ""
 
 msgctxt "province"
-msgid "Zalec"
-msgstr "Žalec"
+msgid "Žalec"
+msgstr ""
 
 msgctxt "province"
-msgid "Zelezniki"
-msgstr "Železniki"
+msgid "Železniki"
+msgstr ""
 
 msgctxt "province"
-msgid "Zetale"
-msgstr "Žetale"
+msgid "Žetale"
+msgstr ""
 
 msgctxt "province"
-msgid "Ziri"
-msgstr "Žiri"
+msgid "Žiri"
+msgstr ""
 
 msgctxt "province"
-msgid "Zirovnica"
-msgstr "Žirovnica"
+msgid "Žirovnica"
+msgstr ""
 
 msgctxt "province"
-msgid "Zuzemberk"
-msgstr "Žužemberk"
+msgid "Žužemberk"
+msgstr ""
 
 msgctxt "province"
 msgid "Banskobystrický kraj"
@@ -15262,339 +15238,11 @@ msgid "Valmiera"
 msgstr ""
 
 msgctxt "province"
-msgid "Santiago Metropolitan"
-msgstr ""
-
-msgctxt "province"
-msgid "Abuja Federal Capital Territory"
-msgstr ""
-
-msgctxt "province"
-msgid "Waikato"
-msgstr ""
-
-msgctxt "province"
-msgid "Zabaykalsky Krai'"
-msgstr ""
-
-msgctxt "province"
-msgid "Kamchatka Krai'"
-msgstr ""
-
-msgctxt "province"
-msgid "Perm krai'"
-msgstr ""
-
-msgctxt "province"
 msgid "Pieria"
 msgstr ""
 
 msgctxt "province"
 msgid "Arica y Parinacota"
-msgstr ""
-
-msgctxt "province"
-msgid "Dobrich"
-msgstr ""
-
-msgctxt "province"
-msgid "Yambol"
-msgstr ""
-
-msgctxt "province"
-msgid "Kardzhali"
-msgstr ""
-
-msgctxt "province"
-msgid "Kyustendil"
-msgstr ""
-
-msgctxt "province"
-msgid "Lovech"
-msgstr ""
-
-msgctxt "province"
-msgid "Smolyan"
-msgstr ""
-
-msgctxt "province"
-msgid "Shumen"
-msgstr ""
-
-msgctxt "province"
-msgid "Targovishte"
-msgstr ""
-
-msgctxt "province"
-msgid "Vratsa"
-msgstr ""
-
-msgctxt "province"
-msgid "Kepulauan Bangka Belitung"
-msgstr ""
-
-msgctxt "province"
-msgid "Papua Barat"
-msgstr ""
-
-msgctxt "province"
-msgid "DKI Jakarta"
-msgstr ""
-
-msgctxt "province"
-msgid "DI Yogyakarta"
-msgstr ""
-
-msgctxt "province"
-msgid "Jūrmala"
-msgstr ""
-
-msgctxt "province"
-msgid "Liepāja"
-msgstr ""
-
-msgctxt "province"
-msgid "Rēzekne"
-msgstr ""
-
-msgctxt "province"
-msgid "Rīga"
-msgstr ""
-
-msgctxt "province"
-msgid "Ajdovščina"
-msgstr ""
-
-msgctxt "province"
-msgid "Braslovče"
-msgstr ""
-
-msgctxt "province"
-msgid "Brežice"
-msgstr ""
-
-msgctxt "province"
-msgid "Črenšovci"
-msgstr ""
-
-msgctxt "province"
-msgid "Črna na Koroškem"
-msgstr ""
-
-msgctxt "province"
-msgid "Črnomelj"
-msgstr ""
-
-msgctxt "province"
-msgid "Divača"
-msgstr ""
-
-msgctxt "province"
-msgid "Domžale"
-msgstr ""
-
-msgctxt "province"
-msgid "Gorišnica"
-msgstr ""
-
-msgctxt "province"
-msgid "Hoče-Slivnica"
-msgstr ""
-
-msgctxt "province"
-msgid "Hodoš"
-msgstr ""
-
-msgctxt "province"
-msgid "Horjul"
-msgstr ""
-
-msgctxt "province"
-msgid "Ilirska Bistrica"
-msgstr ""
-
-msgctxt "province"
-msgid "Ivančna Gorica"
-msgstr ""
-
-msgctxt "province"
-msgid "Juršinci"
-msgstr ""
-
-msgctxt "province"
-msgid "Kidričevo"
-msgstr ""
-
-msgctxt "province"
-msgid "Kočevje"
-msgstr ""
-
-msgctxt "province"
-msgid "Križevci"
-msgstr ""
-
-msgctxt "province"
-msgid "Krško"
-msgstr ""
-
-msgctxt "province"
-msgid "Laško"
-msgstr ""
-
-msgctxt "province"
-msgid "Loška dolina"
-msgstr ""
-
-msgctxt "province"
-msgid "Loški Potok"
-msgstr ""
-
-msgctxt "province"
-msgid "Luče"
-msgstr ""
-
-msgctxt "province"
-msgid "Majšperk"
-msgstr ""
-
-msgctxt "province"
-msgid "Mengeš"
-msgstr ""
-
-msgctxt "province"
-msgid "Mežica"
-msgstr ""
-
-msgctxt "province"
-msgid "Miklavž na Dravskem polju"
-msgstr ""
-
-msgctxt "province"
-msgid "Mirna Peč"
-msgstr ""
-
-msgctxt "province"
-msgid "Moravče"
-msgstr ""
-
-msgctxt "province"
-msgid "Novo mesto"
-msgstr ""
-
-msgctxt "province"
-msgid "Sveti Andraž v Slovenskih goricah"
-msgstr ""
-
-msgctxt "province"
-msgid "Šalovci"
-msgstr ""
-
-msgctxt "province"
-msgid "Šempeter-Vrtojba"
-msgstr ""
-
-msgctxt "province"
-msgid "Šenčur"
-msgstr ""
-
-msgctxt "province"
-msgid "Šentilj"
-msgstr ""
-
-msgctxt "province"
-msgid "Šentjernej"
-msgstr ""
-
-msgctxt "province"
-msgid "Šentjur"
-msgstr ""
-
-msgctxt "province"
-msgid "Škocjan"
-msgstr ""
-
-msgctxt "province"
-msgid "Škofja Loka"
-msgstr ""
-
-msgctxt "province"
-msgid "Škofljica"
-msgstr ""
-
-msgctxt "province"
-msgid "Šmarje pri Jelšah"
-msgstr ""
-
-msgctxt "province"
-msgid "Šmartno ob Paki"
-msgstr ""
-
-msgctxt "province"
-msgid "Šmartno pri Litiji"
-msgstr ""
-
-msgctxt "province"
-msgid "Šoštanj"
-msgstr ""
-
-msgctxt "province"
-msgid "Štore"
-msgstr ""
-
-msgctxt "province"
-msgid "Tišina"
-msgstr ""
-
-msgctxt "province"
-msgid "Trbovlje"
-msgstr ""
-
-msgctxt "province"
-msgid "Tržič"
-msgstr ""
-
-msgctxt "province"
-msgid "Turnišče"
-msgstr ""
-
-msgctxt "province"
-msgid "Velike Lašče"
-msgstr ""
-
-msgctxt "province"
-msgid "Veržej"
-msgstr ""
-
-msgctxt "province"
-msgid "Zavrč"
-msgstr ""
-
-msgctxt "province"
-msgid "Zreče"
-msgstr ""
-
-msgctxt "province"
-msgid "Žalec"
-msgstr ""
-
-msgctxt "province"
-msgid "Železniki"
-msgstr ""
-
-msgctxt "province"
-msgid "Žetale"
-msgstr ""
-
-msgctxt "province"
-msgid "Žiri"
-msgstr ""
-
-msgctxt "province"
-msgid "Žirovnica"
-msgstr ""
-
-msgctxt "province"
-msgid "Žužemberk"
 msgstr ""
 
 msgctxt "province"
@@ -15895,4 +15543,192 @@ msgstr ""
 
 msgctxt "province"
 msgid "Shida Kartli"
+msgstr ""
+
+msgctxt "province"
+msgid "Harjumaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Hiiumaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Ida-Virumaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Jõgevamaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Järvamaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Läänemaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Lääne-Virumaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Põlvamaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Pärnumaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Raplamaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Saaremaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Tartumaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Viljandimaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Võrumaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Klaipėdos Apskritis"
+msgstr ""
+
+msgctxt "province"
+msgid "Marijampolės Apskritis"
+msgstr ""
+
+msgctxt "province"
+msgid "Panevėžio Apskritis"
+msgstr ""
+
+msgctxt "province"
+msgid "Šiaulių Apskritis"
+msgstr ""
+
+msgctxt "province"
+msgid "Tauragės Apskritis"
+msgstr ""
+
+msgctxt "province"
+msgid "Telšių Apskritis"
+msgstr ""
+
+msgctxt "province"
+msgid "Bataan"
+msgstr ""
+
+msgctxt "province"
+msgid "Al Bahah"
+msgstr ""
+
+msgctxt "province"
+msgid "Al Hudud Ash Shamaliyah"
+msgstr ""
+
+msgctxt "province"
+msgid "Blekinge län"
+msgstr ""
+
+msgctxt "province"
+msgid "Dalarnas län"
+msgstr ""
+
+msgctxt "province"
+msgid "Gotlands län"
+msgstr ""
+
+msgctxt "province"
+msgid "Gävleborgs län"
+msgstr ""
+
+msgctxt "province"
+msgid "Hallands län"
+msgstr ""
+
+msgctxt "province"
+msgid "Jämtlands län"
+msgstr ""
+
+msgctxt "province"
+msgid "Jönkopings län"
+msgstr ""
+
+msgctxt "province"
+msgid "Kalmar län"
+msgstr ""
+
+msgctxt "province"
+msgid "Kronobergs län"
+msgstr ""
+
+msgctxt "province"
+msgid "Norrbottens län"
+msgstr ""
+
+msgctxt "province"
+msgid "Skåne län"
+msgstr ""
+
+msgctxt "province"
+msgid "Stockholms län"
+msgstr ""
+
+msgctxt "province"
+msgid "Södermanlands län"
+msgstr ""
+
+msgctxt "province"
+msgid "Uppsala län"
+msgstr ""
+
+msgctxt "province"
+msgid "Värmlands län"
+msgstr ""
+
+msgctxt "province"
+msgid "Västerbottens län"
+msgstr ""
+
+msgctxt "province"
+msgid "Västernorrlands län"
+msgstr ""
+
+msgctxt "province"
+msgid "Västmanlands län"
+msgstr ""
+
+msgctxt "province"
+msgid "Västra Götalands län"
+msgstr ""
+
+msgctxt "province"
+msgid "Örebro län"
+msgstr ""
+
+msgctxt "province"
+msgid "Östergötlands län"
+msgstr ""
+
+msgctxt "province"
+msgid "Phuket"
+msgstr ""
+
+msgctxt "province"
+msgid "Northern Ostrobothnia"
+msgstr ""
+
+msgctxt "province"
+msgid "Telangana"
 msgstr ""
