--- a/po/sq_AL/queue.po
+++ b/po/sq_AL/queue.po
@@ -1,17 +1,16 @@
-# Copyright CiviCRM LLC (c) 2004-2011
+# Copyright CiviCRM LLC (c) 2004-2015
 # This file is distributed under the same license as the CiviCRM package.
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# App Center 123 <transifex@appcenter123.com>, 2013.
+# App Center 123 <transifex@appcenter123.com>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"Report-Msgid-Bugs-To: http://issues.civicrm.org/\n"
-"POT-Creation-Date: 2012-07-24 15:34-0400\n"
-"PO-Revision-Date: 2013-03-18 15:45+0000\n"
-"Last-Translator: appcenter123 <transifex@appcenter123.com>\n"
-"Language-Team: Albanian (http://www.transifex.com/projects/p/civicrm/language/sq/)\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"Language-Team: Albanian (http://www.transifex.com/civicrm/civicrm/language/sq/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -37,3 +36,7 @@ msgstr "Data sipas radhës"
 #: CRM/Queue/Runner.php
 msgid "Queue Runner"
 msgstr "Radha drejtuese "
+
+#: CRM/Queue/DAO/QueueItem.php
+msgid "Queue ID"
+msgstr ""
