po: update po/sq_AL/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sq_AL/menu.po
+++ b/po/sq_AL/menu.po
@@ -8,8 +8,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:10+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Albanian (http://www.transifex.com/civicrm/civicrm/language/sq/)\n"
 "MIME-Version: 1.0\n"
@@ -127,8 +127,8 @@ msgid "Case Activity"
 msgstr "Veprimtari rasti"
 
 msgctxt "menu"
-msgid "Case Report"
-msgstr "Raport rasti"
+msgid "Case Activity Audit"
+msgstr ""
 
 msgctxt "menu"
 msgid "Case Custom Set"
@@ -147,8 +147,8 @@ msgid "Assign to Another Client"
 msgstr "Cakto një klienti tjetër"
 
 msgctxt "menu"
-msgid "Build Activity To Case"
-msgstr "Ndërto aktivitetin e rastit"
+msgid "File on Case"
+msgstr ""
 
 msgctxt "menu"
 msgid "Case Details"
@@ -172,10 +172,6 @@ msgstr "Statuset e rastit"
 msgctxt "menu"
 msgid "Encounter Mediums"
 msgstr "Mediumet e mundshme"
-
-msgctxt "menu"
-msgid "Change Activity Status"
-msgstr ""
 
 msgctxt "menu"
 msgid "CiviContribute Dashboard"
@@ -250,6 +246,10 @@ msgctxt "menu"
 msgid "Financial Types"
 msgstr ""
 
+msgctxt "menu"
+msgid "New Payment"
+msgstr ""
+
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Financial Accounts"
@@ -267,9 +267,15 @@ msgstr "Pranimi kartave të kreditit"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Soft Credit Types"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Contributions"
 msgstr "Kontributet"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Recurring Contributions"
 msgstr "Kontributet e përsëritura"
@@ -319,6 +325,23 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Accounting Batch Export"
+msgstr ""
+
+msgctxt "menu"
+msgid "View Payment"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "CiviContribute Component Settings"
+msgstr ""
+
+msgctxt "menu"
+msgid "PDF Invoice"
+msgstr ""
+
+msgctxt "menu"
+msgid "Email Invoice"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
@@ -473,6 +496,11 @@ msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Date Preferences"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Navigation Menu"
 msgstr "Menu kërkimi"
 
@@ -506,10 +534,6 @@ msgctxt "menu"
 msgid "Schedule Reminders"
 msgstr "Mos harroni orarin"
 
-msgctxt "menu"
-msgid "This should never be seen"
-msgstr "Kjo nuk duhet të shihet kurrë"
-
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Preferred Communication Methods"
@@ -527,6 +551,11 @@ msgstr "Shtyp faqet në formatin (PDF)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Communication Style Options"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Email Greeting Formats"
 msgstr "Formate të përshëndetjeve me Email"
 
@@ -540,8 +569,9 @@ msgctxt "menu"
 msgid "Addressee Formats"
 msgstr "Adresa e marrësit"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Location"
+msgid "Languages, Currency, Locations"
 msgstr "Gjuha, monedha, vendndodhjet"
 
 #: xml/templates/civicrm_navigation.tpl
@@ -693,10 +723,6 @@ msgid "Administer CiviCRM"
 msgstr "Administrimi CiviCRM"
 
 msgctxt "menu"
-msgid "Option Values"
-msgstr "Vlera e zgjedhur"
-
-msgctxt "menu"
 msgid "Price Sets"
 msgstr "Vendos çmimet"
 
@@ -764,10 +790,6 @@ msgstr "Kërko ndërtuesit"
 msgctxt "menu"
 msgid "Custom Searches"
 msgstr "Kërkime të personalizuara"
-
-msgctxt "menu"
-msgid "Simple Search"
-msgstr "Kërkim i thjeshtë"
 
 msgctxt "menu"
 msgid "New Contact"
@@ -859,6 +881,10 @@ msgid "CiviCRM Blog"
 msgstr ""
 
 msgctxt "menu"
+msgid "CiviCRM Getting Started"
+msgstr ""
+
+msgctxt "menu"
 msgid "Case Dashlet"
 msgstr "Rastet Dashlet"
 
@@ -913,6 +939,10 @@ msgid "Import Activities"
 msgstr "Importo veprimtaritë"
 
 msgctxt "menu"
+msgid "Import Multi-value Custom Data"
+msgstr ""
+
+msgctxt "menu"
 msgid "Upgrade CiviCRM"
 msgstr "Përmirësoni CiviCRM"
 
@@ -949,12 +979,16 @@ msgid "Browse Uploaded files"
 msgstr "Shfletoni kartelat e ngarkuara"
 
 msgctxt "menu"
-msgid "Delete file"
+msgid "Delete File"
 msgstr ""
 
 msgctxt "menu"
 msgid "Log out"
 msgstr "Dil nga programi"
+
+msgctxt "menu"
+msgid "CiviCRM API"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -967,6 +1001,10 @@ msgstr ""
 
 msgctxt "menu"
 msgid "ProfileEditor"
+msgstr ""
+
+msgctxt "menu"
+msgid "Confirm dates"
 msgstr ""
 
 msgctxt "menu"
@@ -1064,6 +1102,10 @@ msgid "Event Online Registration"
 msgstr "Regjistrimi i ngjarjes Online"
 
 msgctxt "menu"
+msgid "Repeat Event"
+msgstr ""
+
+msgctxt "menu"
 msgid "Conference Slots"
 msgstr "Konferencë lorash"
 
@@ -1097,6 +1139,10 @@ msgstr "Hiq nga shporta"
 msgctxt "menu"
 msgid "View Cart"
 msgstr "Shiko shportën"
+
+msgctxt "menu"
+msgid "Change Registration Selections"
+msgstr ""
 
 msgctxt "menu"
 msgid "CiviGrant Dashboard"
@@ -1151,8 +1197,8 @@ msgid "Resubscribe"
 msgstr "Ripajtohuni"
 
 msgctxt "menu"
-msgid "Optout"
-msgstr "Zgjedh nga"
+msgid "Opt-out"
+msgstr ""
 
 msgctxt "menu"
 msgid "Confirm"
@@ -1286,6 +1332,11 @@ msgstr "Lista e raporteve"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "CiviCRM News"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Getting Started"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
@@ -1425,6 +1476,16 @@ msgstr "Gjej të gjithë SMS"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "New A/B Test"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Manage A/B Tests"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Reports"
 msgstr ""
 
@@ -1530,11 +1591,6 @@ msgstr "Vendndodhja"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Locations"
-msgstr "Gjuha, monedha, vendndodhjet"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
 msgid "Preferred Language Options"
 msgstr "Mundësitë e gjuhës së preferuar"
 
@@ -1552,6 +1608,11 @@ msgstr "Lejet (kontrolli i qasjes)"
 msgctxt "menu"
 msgid "System Settings"
 msgstr "Cilësimet e sistemit"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Connections"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1620,6 +1681,11 @@ msgstr "CiviGrante"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Grant Status"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "CiviMember"
 msgstr "CiviPjesëmarrës"
 
@@ -1630,8 +1696,13 @@ msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Help"
-msgstr "Ndihmë"
+msgid "Support"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Get started"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1640,18 +1711,43 @@ msgstr "Dokumetacioni"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Community Forums"
-msgstr "Mbjedhjet e përbashkëta"
+msgid "Ask a question"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Participate"
-msgstr "Pjesëmarrësit"
+msgid "Get expert help"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "About"
-msgstr "Rreth"
+msgid "About CiviCRM"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Register your site"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Join CiviCRM"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "API Explorer"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer Docs"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1878,6 +1974,11 @@ msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Provides information about the status of recurring contributions"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Summary"
 msgstr ""
 
@@ -2047,144 +2148,69 @@ msgid ""
 "Detailed report for canvassing, phone-banking, walk lists or other surveys."
 msgstr ""
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Case Activity Audit"
+msgid "Payment Methods"
 msgstr ""
 
 msgctxt "menu"
-msgid "New Payment"
+msgid "Configure CKEditor"
+msgstr ""
+
+msgctxt "menu"
+msgid "Batch Merge Duplicate Contacts"
+msgstr ""
+
+msgctxt "menu"
+msgid "Insert CiviCRM Content"
+msgstr ""
+
+msgctxt "menu"
+msgid "Self-service Registration Update"
+msgstr ""
+
+msgctxt "menu"
+msgid "Self-service Registration Transfer"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Soft Credit Types"
-msgstr ""
-
-msgctxt "menu"
-msgid "View Payment"
+msgid "System Status"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Communication Style Options"
-msgstr ""
-
-msgctxt "menu"
-msgid "Import Multi-value Custom Data"
-msgstr ""
-
-msgctxt "menu"
-msgid "Change Registration Selections"
+msgid "Components"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Grant Status"
+msgid "Extensions"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Developer"
+msgid "Activity Details"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "API Explorer"
+msgid "Activity Summary"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Developer Docs"
-msgstr ""
-
-msgctxt "menu"
-msgid "File on Case"
+msgid "Shows activity statistics by type / date"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "CiviContribute Component Settings"
-msgstr ""
-
-msgctxt "menu"
-msgid "PDF Invoice"
-msgstr ""
-
-msgctxt "menu"
-msgid "Email Invoice"
+msgid "Pledge Detail"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Date Preferences"
-msgstr ""
-
-msgctxt "menu"
-msgid "Delete File"
-msgstr ""
-
-msgctxt "menu"
-msgid "CiviCRM API"
-msgstr ""
-
-msgctxt "menu"
-msgid "Confirm dates"
-msgstr ""
-
-msgctxt "menu"
-msgid "Repeat Event"
-msgstr ""
-
-msgctxt "menu"
-msgid "Opt-out"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "New A/B Test"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Manage A/B Tests"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Support"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Get started"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Ask a question"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Get expert help"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "About CiviCRM"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Register your site"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Join CiviCRM"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Provides information about the status of recurring contributions"
+msgid ""
+"List of pledges including amount pledged, pledge status, next payment date, "
+"balance due, total amount paid etc."
 msgstr ""
