po: update po/sr_RS@latin/countries.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/countries.po
+++ b/po/sr_RS@latin/countries.po
@@ -3,11 +3,12 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Kevin Levie <kevin@levity.nl>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
+"POT-Creation-Date: 2016-05-08 17:05-0400\n"
+"PO-Revision-Date: 2016-05-08 22:32+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -42,195 +43,195 @@ msgstr ""
 
 msgctxt "country"
 msgid "Afghanistan"
-msgstr ""
+msgstr "Afganistan"
 
 msgctxt "country"
 msgid "Albania"
-msgstr ""
+msgstr "Albanija"
 
 msgctxt "country"
 msgid "Algeria"
-msgstr ""
+msgstr "Alžir"
 
 msgctxt "country"
 msgid "American Samoa"
-msgstr ""
+msgstr "Američka Samoa"
 
 msgctxt "country"
 msgid "Andorra"
-msgstr ""
+msgstr "Andora"
 
 msgctxt "country"
 msgid "Angola"
-msgstr ""
+msgstr "Angola"
 
 msgctxt "country"
 msgid "Anguilla"
-msgstr ""
+msgstr "Angvila"
 
 msgctxt "country"
 msgid "Antarctica"
-msgstr ""
+msgstr "Antarktika"
 
 msgctxt "country"
 msgid "Antigua and Barbuda"
-msgstr ""
+msgstr "Antigva i Barbuda"
 
 msgctxt "country"
 msgid "Argentina"
-msgstr ""
+msgstr "Argentina"
 
 msgctxt "country"
 msgid "Armenia"
-msgstr ""
+msgstr "Armenija"
 
 msgctxt "country"
 msgid "Aruba"
-msgstr ""
+msgstr "Aruba"
 
 msgctxt "country"
 msgid "Australia"
-msgstr ""
+msgstr "Australija"
 
 msgctxt "country"
 msgid "Austria"
-msgstr ""
+msgstr "Austrija"
 
 msgctxt "country"
 msgid "Azerbaijan"
-msgstr ""
+msgstr "Azerbajdžan"
 
 msgctxt "country"
 msgid "Bahrain"
-msgstr ""
+msgstr "Bahrein"
 
 msgctxt "country"
 msgid "Bangladesh"
-msgstr ""
+msgstr "Bangladeš"
 
 msgctxt "country"
 msgid "Barbados"
-msgstr ""
+msgstr "Barbados"
 
 msgctxt "country"
 msgid "Belarus"
-msgstr ""
+msgstr "Belarus"
 
 msgctxt "country"
 msgid "Belgium"
-msgstr ""
+msgstr "Belgija"
 
 msgctxt "country"
 msgid "Belize"
-msgstr ""
+msgstr "Belize"
 
 msgctxt "country"
 msgid "Benin"
-msgstr ""
+msgstr "Benin"
 
 msgctxt "country"
 msgid "Bermuda"
-msgstr ""
+msgstr "Bermudi"
 
 msgctxt "country"
 msgid "Bhutan"
-msgstr ""
+msgstr "Butan"
 
 msgctxt "country"
 msgid "Bolivia"
-msgstr ""
+msgstr "Bolivija"
 
 msgctxt "country"
 msgid "Bosnia and Herzegovina"
-msgstr ""
+msgstr "Bosna i Hercegovina"
 
 msgctxt "country"
 msgid "Botswana"
-msgstr ""
+msgstr "Bocvana"
 
 msgctxt "country"
 msgid "Bouvet Island"
-msgstr ""
+msgstr "Ostrvo Buve"
 
 msgctxt "country"
 msgid "Brazil"
-msgstr ""
+msgstr "Brazil"
 
 msgctxt "country"
 msgid "British Indian Ocean Territory"
-msgstr ""
+msgstr "Britanska teritorija Indijskog okeana"
 
 msgctxt "country"
 msgid "Virgin Islands, British"
-msgstr ""
+msgstr "Britanska Devičanska Ostrva"
 
 msgctxt "country"
 msgid "Brunei Darussalam"
-msgstr ""
+msgstr "Brunej Darussalam"
 
 msgctxt "country"
 msgid "Bulgaria"
-msgstr ""
+msgstr "Bugarska"
 
 msgctxt "country"
 msgid "Burkina Faso"
-msgstr ""
+msgstr "Burkina Faso"
 
 msgctxt "country"
 msgid "Myanmar"
-msgstr ""
+msgstr "Mjanmar"
 
 msgctxt "country"
 msgid "Burundi"
-msgstr ""
+msgstr "Burundi"
 
 msgctxt "country"
 msgid "Cambodia"
-msgstr ""
+msgstr "Kambodža"
 
 msgctxt "country"
 msgid "Cameroon"
-msgstr ""
+msgstr "Kamerun"
 
 msgctxt "country"
 msgid "Canada"
-msgstr ""
+msgstr "Kanada"
 
 msgctxt "country"
 msgid "Cape Verde"
-msgstr ""
+msgstr "Kabo Verde"
 
 msgctxt "country"
 msgid "Cayman Islands"
-msgstr ""
+msgstr "Kajmanska ostrva"
 
 msgctxt "country"
 msgid "Central African Republic"
-msgstr ""
+msgstr "Srednjoafrička Republika"
 
 msgctxt "country"
 msgid "Chad"
-msgstr ""
+msgstr "Čad"
 
 msgctxt "country"
 msgid "Chile"
-msgstr ""
+msgstr "Čile"
 
 msgctxt "country"
 msgid "China"
-msgstr ""
+msgstr "Kina"
 
 msgctxt "country"
 msgid "Christmas Island"
-msgstr ""
+msgstr "Božićno Ostrvo"
 
 msgctxt "country"
 msgid "Cocos (Keeling) Islands"
-msgstr ""
+msgstr "Kokosova ostrva"
 
 msgctxt "country"
 msgid "Colombia"
-msgstr ""
+msgstr "Kolumbija"
 
 msgctxt "country"
 msgid "Comoros"
@@ -238,95 +239,95 @@ msgstr ""
 
 msgctxt "country"
 msgid "Congo, The Democratic Republic of the"
-msgstr ""
+msgstr "Kongo, Demokratska Republika"
 
 msgctxt "country"
 msgid "Congo, Republic of the"
-msgstr ""
+msgstr "Kongo, Republika"
 
 msgctxt "country"
 msgid "Cook Islands"
-msgstr ""
+msgstr "Kukova Ostrva"
 
 msgctxt "country"
 msgid "Costa Rica"
-msgstr ""
+msgstr "Kostarika"
 
 msgctxt "country"
 msgid "Côte d'Ivoire"
-msgstr ""
+msgstr "Obala Slonovače"
 
 msgctxt "country"
 msgid "Croatia"
-msgstr ""
+msgstr "Hrvatska"
 
 msgctxt "country"
 msgid "Cuba"
-msgstr ""
+msgstr "Kuba"
 
 msgctxt "country"
 msgid "Cyprus"
-msgstr ""
+msgstr "Kipar"
 
 msgctxt "country"
 msgid "Czech Republic"
-msgstr ""
+msgstr "Češka Republika"
 
 msgctxt "country"
 msgid "Denmark"
-msgstr ""
+msgstr "Danska"
 
 msgctxt "country"
 msgid "Djibouti"
-msgstr ""
+msgstr "Džibuti"
 
 msgctxt "country"
 msgid "Dominica"
-msgstr ""
+msgstr "Dominika"
 
 msgctxt "country"
 msgid "Dominican Republic"
-msgstr ""
+msgstr "Dominikanska Republika"
 
 msgctxt "country"
 msgid "Timor-Leste"
-msgstr ""
+msgstr "Istočni Timor"
 
 msgctxt "country"
 msgid "Ecuador"
-msgstr ""
+msgstr "Ekvador"
 
 msgctxt "country"
 msgid "Egypt"
-msgstr ""
+msgstr "Egipat"
 
 msgctxt "country"
 msgid "El Salvador"
-msgstr ""
+msgstr "Salvador"
 
 msgctxt "country"
 msgid "Equatorial Guinea"
-msgstr ""
+msgstr "Ekvatorijalna Gvineja"
 
 msgctxt "country"
 msgid "Eritrea"
-msgstr ""
+msgstr "Eritreja"
 
 msgctxt "country"
 msgid "Estonia"
-msgstr ""
+msgstr "Estonija"
 
 msgctxt "country"
 msgid "Ethiopia"
-msgstr ""
+msgstr "Etiopija"
 
 msgctxt "country"
 msgid "Falkland Islands (Malvinas)"
-msgstr ""
+msgstr "Folklandska Ostrva"
 
 msgctxt "country"
 msgid "Faroe Islands"
-msgstr ""
+msgstr "Farska Ostrva"
 
 msgctxt "country"
 msgid "Fiji"
@@ -334,11 +335,11 @@ msgstr ""
 
 msgctxt "country"
 msgid "Finland"
-msgstr ""
+msgstr "Finska"
 
 msgctxt "country"
 msgid "France"
-msgstr ""
+msgstr "Francuska"
 
 msgctxt "country"
 msgid "French Guiana"
@@ -358,31 +359,31 @@ msgstr ""
 
 msgctxt "country"
 msgid "Georgia"
-msgstr ""
+msgstr "Gruzija"
 
 msgctxt "country"
 msgid "Germany"
-msgstr ""
+msgstr "Nemačka"
 
 msgctxt "country"
 msgid "Ghana"
-msgstr ""
+msgstr "Gana"
 
 msgctxt "country"
 msgid "Gibraltar"
-msgstr ""
+msgstr "Gibraltar"
 
 msgctxt "country"
 msgid "Greece"
-msgstr ""
+msgstr "Grčka"
 
 msgctxt "country"
 msgid "Greenland"
-msgstr ""
+msgstr "Grenland"
 
 msgctxt "country"
 msgid "Grenada"
-msgstr ""
+msgstr "Grenada"
 
 msgctxt "country"
 msgid "Guadeloupe"
@@ -430,43 +431,43 @@ msgstr ""
 
 msgctxt "country"
 msgid "Hungary"
-msgstr ""
+msgstr "Mađarska"
 
 msgctxt "country"
 msgid "Iceland"
-msgstr ""
+msgstr "Island"
 
 msgctxt "country"
 msgid "India"
-msgstr ""
+msgstr "Indija"
 
 msgctxt "country"
 msgid "Indonesia"
-msgstr ""
+msgstr "Indonezija"
 
 msgctxt "country"
 msgid "Iran, Islamic Republic of"
-msgstr ""
+msgstr "Iran"
 
 msgctxt "country"
 msgid "Iraq"
-msgstr ""
+msgstr "Irak"
 
 msgctxt "country"
 msgid "Ireland"
-msgstr ""
+msgstr "Irska"
 
 msgctxt "country"
 msgid "Israel"
-msgstr ""
+msgstr "Izrael"
 
 msgctxt "country"
 msgid "Italy"
-msgstr ""
+msgstr "Italija"
 
 msgctxt "country"
 msgid "Jamaica"
-msgstr ""
+msgstr "Jamajka"
 
 msgctxt "country"
 msgid "Japan"
@@ -474,27 +475,27 @@ msgstr ""
 
 msgctxt "country"
 msgid "Jordan"
-msgstr ""
+msgstr "Jordan"
 
 msgctxt "country"
 msgid "Kazakhstan"
-msgstr ""
+msgstr "Kazahstan"
 
 msgctxt "country"
 msgid "Kenya"
-msgstr ""
+msgstr "Kenija"
 
 msgctxt "country"
 msgid "Kiribati"
-msgstr ""
+msgstr "Kiribati"
 
 msgctxt "country"
 msgid "Korea, Democratic People's Republic of"
-msgstr ""
+msgstr "Severna Koreja"
 
 msgctxt "country"
 msgid "Korea, Republic of"
-msgstr ""
+msgstr "Južna Koreja"
 
 msgctxt "country"
 msgid "Kuwait"
@@ -538,7 +539,7 @@ msgstr ""
 
 msgctxt "country"
 msgid "Luxembourg"
-msgstr ""
+msgstr "Luksemburg"
 
 msgctxt "country"
 msgid "Macao"
@@ -546,11 +547,11 @@ msgstr ""
 
 msgctxt "country"
 msgid "Macedonia, Republic of"
-msgstr ""
+msgstr "Makedonija, Republika"
 
 msgctxt "country"
 msgid "Madagascar"
-msgstr ""
+msgstr "Madagaskar"
 
 msgctxt "country"
 msgid "Malawi"
@@ -570,7 +571,7 @@ msgstr ""
 
 msgctxt "country"
 msgid "Malta"
-msgstr ""
+msgstr "Malta"
 
 msgctxt "country"
 msgid "Marshall Islands"
@@ -606,7 +607,7 @@ msgstr ""
 
 msgctxt "country"
 msgid "Monaco"
-msgstr ""
+msgstr "Monako"
 
 msgctxt "country"
 msgid "Mongolia"
@@ -618,7 +619,7 @@ msgstr ""
 
 msgctxt "country"
 msgid "Morocco"
-msgstr ""
+msgstr "Maroko"
 
 msgctxt "country"
 msgid "Mozambique"
@@ -638,7 +639,7 @@ msgstr ""
 
 msgctxt "country"
 msgid "Netherlands"
-msgstr ""
+msgstr "Holandija"
 
 msgctxt "country"
 msgid "New Caledonia"
@@ -674,11 +675,11 @@ msgstr ""
 
 msgctxt "country"
 msgid "Norway"
-msgstr ""
+msgstr "Norveška"
 
 msgctxt "country"
 msgid "Oman"
-msgstr ""
+msgstr "Oman"
 
 msgctxt "country"
 msgid "Pakistan"
@@ -718,11 +719,11 @@ msgstr ""
 
 msgctxt "country"
 msgid "Poland"
-msgstr ""
+msgstr "Poljska"
 
 msgctxt "country"
 msgid "Portugal"
-msgstr ""
+msgstr "Portugalija"
 
 msgctxt "country"
 msgid "Puerto Rico"
@@ -734,11 +735,11 @@ msgstr ""
 
 msgctxt "country"
 msgid "Romania"
-msgstr ""
+msgstr "Rumunija"
 
 msgctxt "country"
 msgid "Russian Federation"
-msgstr ""
+msgstr "Rusija"
 
 msgctxt "country"
 msgid "Rwanda"
@@ -798,11 +799,11 @@ msgstr ""
 
 msgctxt "country"
 msgid "Slovakia"
-msgstr ""
+msgstr "Slovačka"
 
 msgctxt "country"
 msgid "Slovenia"
-msgstr ""
+msgstr "Slovenija"
 
 msgctxt "country"
 msgid "Solomon Islands"
@@ -822,7 +823,7 @@ msgstr ""
 
 msgctxt "country"
 msgid "Spain"
-msgstr ""
+msgstr "Španija"
 
 msgctxt "country"
 msgid "Sri Lanka"
@@ -834,7 +835,7 @@ msgstr ""
 
 msgctxt "country"
 msgid "Suriname"
-msgstr ""
+msgstr "Surinam"
 
 msgctxt "country"
 msgid "Svalbard and Jan Mayen"
@@ -846,11 +847,11 @@ msgstr ""
 
 msgctxt "country"
 msgid "Sweden"
-msgstr ""
+msgstr "Švedska"
 
 msgctxt "country"
 msgid "Switzerland"
-msgstr ""
+msgstr "Švajcarska"
 
 msgctxt "country"
 msgid "Syrian Arab Republic"
@@ -906,7 +907,7 @@ msgstr ""
 
 msgctxt "country"
 msgid "Turkey"
-msgstr ""
+msgstr "Turska"
 
 msgctxt "country"
 msgid "Turkmenistan"
@@ -926,7 +927,7 @@ msgstr ""
 
 msgctxt "country"
 msgid "Ukraine"
-msgstr ""
+msgstr "Ukrajina"
 
 msgctxt "country"
 msgid "United Arab Emirates"
@@ -934,7 +935,7 @@ msgstr ""
 
 msgctxt "country"
 msgid "United Kingdom"
-msgstr ""
+msgstr "Ujedinjeno Kraljevstvo"
 
 msgctxt "country"
 msgid "United States Minor Outlying Islands"
@@ -942,11 +943,11 @@ msgstr ""
 
 msgctxt "country"
 msgid "United States"
-msgstr ""
+msgstr "Sjedinjene Američke Države"
 
 msgctxt "country"
 msgid "Uruguay"
-msgstr ""
+msgstr "Urugvaj"
 
 msgctxt "country"
 msgid "Uzbekistan"
@@ -958,7 +959,7 @@ msgstr ""
 
 msgctxt "country"
 msgid "Venezuela"
-msgstr ""
+msgstr "Venecuela"
 
 msgctxt "country"
 msgid "Viet Nam"
@@ -974,7 +975,7 @@ msgstr ""
 
 msgctxt "country"
 msgid "Western Sahara"
-msgstr ""
+msgstr "Zapadna Sahara"
 
 msgctxt "country"
 msgid "Yemen"
@@ -982,7 +983,7 @@ msgstr ""
 
 msgctxt "country"
 msgid "Serbia and Montenegro"
-msgstr ""
+msgstr "Srbija i Crna Gora"
 
 msgctxt "country"
 msgid "Zambia"
@@ -998,11 +999,11 @@ msgstr ""
 
 msgctxt "country"
 msgid "Serbia"
-msgstr ""
+msgstr "Srbija"
 
 msgctxt "country"
 msgid "Montenegro"
-msgstr ""
+msgstr "Crna Gora"
 
 msgctxt "country"
 msgid "Jersey"
@@ -1034,7 +1035,7 @@ msgstr ""
 
 msgctxt "country"
 msgid "Kosovo"
-msgstr ""
+msgstr "Kosovo"
 
 msgctxt "country"
 msgid "Saint Barthélemy"
