po: update po/sv_SE/extension.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/extension.po
+++ b/po/sv_SE/extension.po
@@ -8,9 +8,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-03-21 15:39+0000\n"
-"Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -27,11 +27,6 @@ msgid ""
 "Your extensions cache directory (%1) is not web server writable. Please go "
 "to the <a href=\"%2\">path setting page</a> and correct it.<br/>"
 msgstr ""
-
-#: CRM/Extension/Browser.php
-msgid ""
-"Not checking remote URL for extensions since ext_repo_url is set to false."
-msgstr "Kollar inte fjärr-URL för utökningar eftersom expt_repo_url är satt till falsk."
 
 #: CRM/Extension/Browser.php
 msgid ""
@@ -53,10 +48,6 @@ msgid ""
 "compatible, you may be able to <a href=\"%3\">download and install "
 "extensions manually</a> (depending on access to your web server).<br />"
 msgstr "Det finns just nu inga tillägg i CiviCRM's register över tillägg som är kompatibla med version %2 (<a href=\"%1\">hämtade listan härifrån</a>). Om du vill installera ett tillägg som inte är märkt som kompatibelt, kan du prova med att <a href=\"%3\">ladda ner och installera tillägg manuellt</a> (beroende på din tillgång till din webbserver).<br />"
-
-#: CRM/Extension/Browser.php
-msgid "No Extensions Available for this Version"
-msgstr "Det finns inga tillägg för den här versionen"
 
 #: CRM/Extension/Container/Basic.php CRM/Extension/Container/Default.php
 msgid "Invalid Base Directory"
@@ -114,6 +105,13 @@ msgid ""
 msgstr ""
 
 #: CRM/Extension/Downloader.php
+msgid ""
+"WARNING: The downloader may be unable to download files which require HTTP "
+"redirection. This may be a configuration issue with PHP's open_basedir or "
+"safe_mode."
+msgstr ""
+
+#: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension: bad directory structure"
 msgstr ""
 
@@ -157,9 +155,13 @@ msgid ""
 "will be preserved, but the new copy will be used."
 msgstr ""
 
-#: CRM/Extension/Downloader.php
+#: CRM/Extension/Manager.php
+msgid "Selected option value has been deleted."
+msgstr ""
+
+#: CRM/Extension/Browser.php
 msgid ""
-"WARNING: The downloader may be unable to download files which require HTTP "
-"redirection. This may be a configuration issue with PHP's open_basedir or "
-"safe_mode."
+"The CiviCRM public extensions directory at %1 could not be contacted - "
+"please check your webserver can make external HTTP requests or contact "
+"CiviCRM team on <a href=\"http://forum.civicrm.org/\">CiviCRM forum</a>."
 msgstr ""
